# bench

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs  bincode.rs
benches/flavor/: mod.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: bincode.rs
src/: de.rs  error.rs  lib.rs  ser.rs
tests/: bincode.rs
