[package]
name = "serde-bench"
version = "0.0.13"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["encoding", "development-tools::profiling"]
description = "Minimal serialization format for benchmarking Serde"
documentation = "https://docs.rs/serde-bench/"
edition = "2021"
include = ["Cargo.toml", "src/**/*.rs"]
keywords = ["serde", "serialization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/serde-rs/bench"
rust-version = "1.68"

[dependencies]
byteorder = "1.4.3"
serde = "1.0.166"

[dev-dependencies]
bincode = { version = "2", features = ["derive", "serde"] }
postcard = { version = "1.0", features = ["use-std"] }
serde = { version = "1.0", features = ["derive"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]
