[package]
name = "serde-bench"
version = "0.0.14"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["encoding", "development-tools::profiling"]
description = "Minimal serialization format for benchmarking Serde"
documentation = "https://docs.rs/serde-bench/"
edition = "2021"
include = ["Cargo.toml", "src/**/*.rs"]
keywords = ["serde", "serialization"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/serde-rs/bench"
rust-version = "1.68"

[dependencies]
byteorder = "1.4.3"
serde_core = "1.0.220"

[dev-dependencies]
bincode = { version = "2", features = ["derive", "serde"] }
criterion = { version = "0.8", default-features = false }
postcard = { version = "1", features = ["use-std"] }
postcard2 = { version = "0.2", features = ["std"] }
serde = { version = "1", features = ["derive"] }

[[bench]]
name = "bench"
harness = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--generate-macro-expansion",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]
